--- a/preact/package.json
+++ b/preact/package.json
@@ -3,22 +3,24 @@
   "version": "0.0.0",
   "license": "WTFPL",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "tsc -p . && rollup -c",
     "watch": "rollup -c -w"
   },
   "dependencies": {
-    "preact": "^10.5.13",
-    "preact-shared-state-hook": "^0.2.1"
+    "preact": "^10.15.1",
+    "preact-shared-state-hook": "^0.2.5",
+    "rollup-plugin-filesize": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/plugin-transform-react-jsx": "^7.13.12",
-    "@babel/preset-typescript": "^7.13.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "rollup": "^2.45.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.2.4"
+    "@babel/core": "^7.22.1",
+    "@babel/plugin-transform-react-jsx": "^7.22.3",
+    "@babel/preset-typescript": "^7.21.5",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "rollup": "^3.23.1",
+    "typescript": "^5.1.3"
   }
 }
