--- a/react/package.json
+++ b/react/package.json
@@ -3,27 +3,29 @@
   "version": "0.0.0",
   "license": "WTFPL",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "tsc -p . && rollup -c",
     "watch": "rollup -c -w"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "recoil": "^0.2.0"
+    "jotai": "^2.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rollup-plugin-filesize": "^10.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-react": "^7.13.13",
-    "@babel/preset-typescript": "^7.13.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-commonjs": "^18.0.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-replace": "^2.4.2",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
-    "rollup": "^2.45.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.2.4"
+    "@babel/core": "^7.22.1",
+    "@babel/preset-react": "^7.22.3",
+    "@babel/preset-typescript": "^7.21.5",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.0",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-replace": "^5.0.2",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
+    "rollup": "^3.23.1",
+    "typescript": "^5.1.3"
   }
 }
