--- a/react/tsconfig.json
+++ b/react/tsconfig.json
@@ -1,15 +1,28 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
+    "module": "ESNext",
+    "skipLibCheck": true,
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "noEmit": true,
-    "target": "es2020",
-    "module": "es2020",
-    "moduleResolution": "node",
-    "jsx": "react",
+    "jsx": "react-jsx",
+    /* Linting */
     "strict": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
+    // "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "newLine": "LF"
+    "noFallthroughCasesInSwitch": true
   },
-  "files": ["react-index.tsx"]
+  "files": [
+    "react-index.tsx"
+  ]
 }
