--- a/solid/package.json
+++ b/solid/package.json
@@ -3,21 +3,23 @@
   "version": "0.0.0",
   "license": "WTFPL",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "tsc -p . && rollup -c",
     "watch": "rollup -c -w"
   },
   "dependencies": {
-    "solid-js": "^0.26.0"
+    "rollup-plugin-filesize": "^10.0.0",
+    "solid-js": "^1.7.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-typescript": "^7.13.0",
-    "@rollup/plugin-babel": "^5.3.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "babel-preset-solid": "^0.26.0",
-    "rollup": "^2.45.1",
-    "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^4.2.4"
+    "@babel/core": "^7.22.1",
+    "@babel/preset-typescript": "^7.21.5",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
+    "babel-preset-solid": "^1.7.4",
+    "rollup": "^3.23.1",
+    "typescript": "^5.1.3"
   }
 }
