--- a/solid/tsconfig.json
+++ b/solid/tsconfig.json
@@ -1,16 +1,29 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "module": "ESNext",
+    "lib": [
+      "ES2020",
+      "DOM",
+      "DOM.Iterable"
+    ],
+    "skipLibCheck": true,
+    /* Bundler mode */
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
     "noEmit": true,
-    "target": "es2020",
-    "module": "es2020",
-    "moduleResolution": "node",
     "jsx": "react-jsx",
     "jsxImportSource": "solid-js",
+    /* Linting */
     "strict": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
+    // "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "newLine": "LF"
+    "noFallthroughCasesInSwitch": true
   },
-  "files": ["solid-index.tsx"]
+  "files": [
+    "solid-index.tsx"
+  ]
 }
